[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/Player/face_material.tres" type="Material" id=2]
[ext_resource path="res://src/Items/HuntingRifle/HuntingRifle.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.1, 1, 0.1 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 0.2, 1.25, 0.2 )

[sub_resource type="CapsuleShape" id=5]
radius = 0.5

[node name="Player" type="KinematicBody"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="Pivot" type="Position3D" parent="."]

[node name="Body" type="MeshInstance" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
mesh = SubResource( 1 )

[node name="Face" type="Spatial" parent="Pivot/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.510945, 0.427587 )

[node name="EyeR" type="MeshInstance" parent="Pivot/Body/Face"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.16419, 0.0175455, 0.0608883 )
mesh = SubResource( 2 )
material/0 = ExtResource( 2 )

[node name="EyeL" type="MeshInstance" parent="Pivot/Body/Face"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.100144, 0.0175455, 0.0608883 )
mesh = SubResource( 2 )
material/0 = ExtResource( 2 )

[node name="Nose" type="MeshInstance" parent="Pivot/Body/Face"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.018, -0.0966351 )
mesh = SubResource( 3 )
material/0 = ExtResource( 2 )

[node name="RShoulder" type="Spatial" parent="Pivot/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.629226, -2.04193e-08, 0.467139 )

[node name="Arm" type="MeshInstance" parent="Pivot/Body/RShoulder"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 2.76743e-08, -0.633113 )
mesh = SubResource( 4 )

[node name="ItemMount" type="Spatial" parent="Pivot/Body/RShoulder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.338, -0.5 )

[node name="HuntingRifle" parent="Pivot/Body/RShoulder/ItemMount" instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 5 )

[node name="CameraMount" type="Spatial" parent="."]

[node name="v" type="Spatial" parent="CameraMount"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )

[node name="Camera" type="ClippedCamera" parent="CameraMount/v"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00735521, -1.00567, 0.128361 )
near = 0.5
far = 2000.0
process_mode = 1
collision_mask = 113

[node name="RayMount" type="Spatial" parent="CameraMount/v/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )

[node name="LookAtRayCast" type="RayCast" parent="CameraMount/v/Camera/RayMount"]
cast_to = Vector3( 0, 0, -10 )
collision_mask = 146
